--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+..."
+    "url": "https://github.com/wafel34/camperLaderboard.git"
   },
   "author": "Pawel Marcinkowski",
   "devDependencies": {
